pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: cart-pod 
spec:
  containers:
    - name: test-cont 
      image: muralisocial123/cart-page-test:1.0
      ports:
        - containerPort: 3000
    - name: example-container 
      image:  muralisocial123/deloitte-web-app:1.0
      ports:
        - containerPort: 80
