Deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: cart-deployment 
spec:
  replicas: 2
  selector: 
    matchLabels:
      web: app 
  template:
    metadata:
      labels:
        web: app 
    spec: 
      containers:
        - name: cart-container 
          image: muralisocial123/cart-page-example:1.0
          resources:
            limits:
              cpu: 50m
              memory: 250Mi
            requests:
              cpu: 25m 
              memory: 120Mi 
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cart-svc
spec:
  selector:
    web: app
  ports:
  - port: 3001
    targetPort: 3000 
    protocol: TCP 
  type: NodePort
