test-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: test-web-deployment 
spec:
  replicas: 2
  selector: 
    matchLabels:
      web: test
  template:
    metadata:
      labels:
        web: test
    spec: 
      containers:
        - name: test-container 
          image: muralisocial123/test-web-oracle-example:1.0
          resources:
            limits:
              cpu: 50m
              memory: 250Mi
            requests:
              cpu: 25m 
              memory: 120Mi 
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-web-svc
spec:
  selector:
    web: test
  ports:
  - port: 81
    targetPort: 80 
    protocol: TCP 
  type: ClusterIP
