ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$3
spec:
  ingressClassName: nginx 
  rules:
    - http:
      paths: 
        - path: /cart(/|$)(.*)
          pathType: prefix 
          backend:
            service:
              name: cart-svc
              port:
                number: 3001
        - path: /organic(/|$)(.*)
          pathType: prefix 
          backend:
            service:
              name: organic-svc
              port:
                number: 5657
